Migrated to newest vuze dht version